# rubufr

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  test_program.sh
src/: bit_buffer.rs  easy_api.rs  lib.rs  section0.rs  section1.rs  section2.rs  section3.rs  section4.rs  section5.rs  tables.rs  types.rs
src/types/: message_builder.rs  structure.rs
test-data/: 2017083115.bufr
