[package]
name = "sonde-bufr"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "^1.4"
chrono = "^0.4"
metfor = "^0.10.0"
optional = "^0.5.0"
sounding-analysis = "^0.19.1"

[build-dependencies]
quick-xml = "^0.38.4"
